<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/list_now"
            android:icon="@drawable/default_cover_art"
            android:title="@string/listnow" />
        <item
            android:id="@+id/recents"
            android:icon="@drawable/default_cover_art"
            android:title="@string/recents" />
        <item
            android:id="@+id/music_library"
            android:icon="@drawable/default_cover_art"
            android:title="@string/music_library" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/default_cover_art"
            android:title="@string/setting" />
        <item
            android:id="@+id/help_feedback"
            android:icon="@drawable/default_cover_art"
            android:title="@string/help_feedback" />
    </group>
</menu>
<!--
Bạn có thể tạo nhóm với các item riêng biệt bằng cách sử dụng
android:checkableBehavior="single"
được thiết lập ở nhóm. Nó cho phép bạn hiển thị danh sách các item-->
